turtleart.housetree.HouseTree.scala.error
Compilation error:
HouseTree:0: error: class HouseTree needs to be abstract, since method faireMaison is not defined
class HouseTree extends Turtle {
      ^